@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.412" hostname="unknown" timestamp="2015-04-13T17:55:28">
+<testsuite name="test_failure_output" errors="1" failures="25" tests="26" time="0.411" hostname="unknown" timestamp="2015-04-13T18:03:49">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure><![CDATA[(no message available)
