@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.021" hostname="unknown" timestamp="2015-04-13T17:55:28">
+<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.021" hostname="unknown" timestamp="2015-04-13T18:03:49">
   <properties/>
   <testcase classname="test_success_output" name="test_success"/>
   <system-out/>
